# Loulou

./: .gitignore  README.md  config.json  main.py  post_template.md  pyproject.toml
css/: style.css
javascript/: script.js
posts/: template_post.md
src/: create_base.py  create_home.py  create_individualposts.py  create_json.py  create_main.py  create_pages.py  create_posts.py  setup_site.py
templates/: template_about.html  template_base.html  template_main.html
