[project]
name = "loulou"
version = "0.1.0"
description = "simple static site generator written in Python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mistune>=3.2.0",
]

[tool.ruff.lint]
ignore = [
    "D100", # missing docstring
    "F401", # unused import
    "F405", # maybe undefined, or defined from star import
    "E501", # line too long
    "W291"  # trailing whitespace
]
